devops/kubernetes/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  annotations:
    nginx.org/client-max-body-size: 8m
    nginx.org/proxy-read-timeout: "3600"
    nginx.org/proxy-send-timeout: "3600"

spec:
  ingressClassName: nginx
  rules:
    - host: order.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
